# projMarble1

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  otus_marble_project.zargo  perturbationsKA.cpp  ТЗ_программа_докторка.doc
